# rust-reader

./: .appveyor.yml  .atom-build.json  .gitattributes  .gitignore  Cargo.toml  New Text Document.txt  README.md  Todo List.txt  build.rs  rust_reader.manifest  setings_backup.prefs.json
src/: Todo List.txt  actions.rs  clean_text.rs  clipboard.rs  hot_key.rs  main.rs  on_screen_control.rs  sapi.rs  settings.rs  wide_string.rs  window.rs
src/clean_text/: bench.rs  mod.rs  regex_cleaner_pair.rs  regex_clener_pair.rs  regex_clener_pare.rs  test.rs
