[package]
name = "rust_reader"
version = "0.1.0"
authors = ["Eh2406 <YeomanYaacov@gmail.com>"]

[dependencies]
winapi = { version = "*", features = ["std", "winerror", "commctrl", "processthreadsapi", "combaseapi", "shellapi", "objbase", "wincon", "winuser", "sapi", "sapi51", "sapi53"] }
clipboard-win = "*"
serde_derive = "*"
serde = "*"
preferences = { git = "https://github.com/Eh2406/preferences-rs", branch = "patch-1"}
unicode-segmentation = "*"
regex = "*"
itertools = "*"
ordslice = "*"
average = { git = "https://github.com/Eh2406/average", branch = "master", features = ["serde"]}
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
quickcheck = "*"
lazy_static = "*"

[profile.release]
debug = true

[profile.bench]
debug = true
