[package]
name = "rust_reader"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Eh2406 <YeomanYaacov@gmail.com>"]
edition = "2021"

[dependencies]
windows = { version = "0.46.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Speech",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }
clipboard-win = "4.5.0"
serde = { version = "1.0.160", features = ["derive"] }
preferences = { git = "https://github.com/Eh2406/preferences-rs", branch = "patch-1"}
unicode-segmentation = "1.10.1"
regex = "1.8.1"
itertools = "0.10.5"
average = { version = "0.9.2", features = ["serde1"]}
chrono = { version = "0.4", features = ["serde"] }
error-code = "2.3.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"

[dev-dependencies]
quickcheck = "1.0.3"
once_cell = "1.18.0"

[profile.release]
debug = true

[profile.bench]
debug = true
